Added swagger documentation to the voucher module
