# app/Http/Requests/Vouchers/GetVouchersRequest.php
@@ -11,6 +11,10 @@ class GetVouchersRequest extends FormRequest
         return [
             'page' => ['required', 'int', 'gt:0'],
             'paginate' => ['required', 'int', 'gt:0'],
+            'series' => ['nullable', 'string'],
+            'number' => ['nullable', 'string'],
+            'startDate' => ['nullable', 'date'],
+            'endDate' => ['nullable', 'date', 'after_or_equal:startDate'],
         ];
     }
 }
